make input logic validation and trim functions

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <div class="container">
             <a class="bank" href="https://bank.gov.ua/" target="_blank" rel="noopener noreferer">
                 <img src="./image/logo.png" alt="national bank of ukraine" height="30">
@@ -19,9 +19,9 @@
         </div>        
     </header>
 
-    <main>
+    <main class="main">
         <div class="container">
-            <h1>Currency Converter</h1>
+            <h1 class="title">Currency Converter</h1>
 
             <form class="currency-form">
                 <label class="from-value">
