--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" >
 
 <head>
     <meta charset="utf-8" />
@@ -12,10 +12,18 @@
     <header class="header">
         <div class="container">
             <a class="bank" href="https://bank.gov.ua/" target="_blank" rel="noopener noreferer">
-                <img src="./image/logo.png" alt="national bank of ukraine" height="30">
+                <img src="./image/logo-bank.png" alt="national bank of ukraine" height="30">
             </a>
             <ul class="currency-list">
             </ul>
+            <button class="btn-color-theme" type="button">
+                <svg class="icon-night" width="30" height="30" hide>
+                    <use href="./image/icon/icons.svg#icon-night"></use>
+                </svg>
+                <svg class="icon-light" width="30" height="30">
+                    <use href="./image/icon/icons.svg#icon-light"></use>
+                </svg>
+            </button>
         </div>        
     </header>
 
@@ -23,7 +31,7 @@
         <div class="container">
             <h1 class="title">Currency Converter</h1>
 
-            <form class="currency-form">
+            <form class="currency-form" night>
                 <label class="from-value">
                     <p>FROM</p>
                     <input name="fromQuantity" type="number">
