refactoring function and styles

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Currency Converter</title>
-    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="scss/_index.scss">
     <script type="module" src="scripts/app.js"></script>
 </head>
 
@@ -16,7 +16,7 @@
             </a>
             <ul class="currency-list">
             </ul>
-            <button class="btn-color-theme" type="button">
+            <button class="btn-color-theme" type="button" alt="button switch color theme">
                 <svg class="icon-night" width="30" height="30" hide>
                     <use href="./image/icon/icons.svg#icon-night"></use>
                 </svg>
@@ -49,8 +49,8 @@
                 </label>
         
         
-                <button type="submit">Convert</button>
-                <button type="reset">Reset</button>
+                <button type="submit" alt="button convert">Convert</button>
+                <button type="reset" alt="button reset">Reset</button>
             </form>
         </div>
     </main>
