--- a/src/index.html
+++ b/src/index.html
@@ -17,13 +17,19 @@
             <ul class="currency-list">
             </ul>
             <button class="btn-color-theme" type="button" alt="button switch color theme">
-                <svg class="icon-night" width="30" height="30" hide>
+                <svg  width="30" height="30" >
+                    <use class="icon-night" href="./image/icon/icons.svg#icon-night" hide></use>
+                <!-- </svg> -->
+                <!-- <svg  width="30" height="30"> -->
+                    <use class="icon-light" href="./image/icon/icons.svg#icon-light"></use>
+                </svg>
+            </button>
+            <!-- <svg class="icon-night" width="30" height="30" hide>
                     <use href="./image/icon/icons.svg#icon-night"></use>
                 </svg>
                 <svg class="icon-light" width="30" height="30">
                     <use href="./image/icon/icons.svg#icon-light"></use>
-                </svg>
-            </button>
+                </svg> -->
         </div>        
     </header>
 
