--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,10 @@
             </ul>
             <button class="btn-color-theme" type="button" alt="button switch color theme">
                 <svg  width="30" height="30" >
-                    <use class="icon-night" href="./image/icon/icons.svg#icon-night" hide></use>
+                    <use class="icon-night" href="/src/image/icon/icons.svg#icon-night" hide></use>
                 <!-- </svg> -->
                 <!-- <svg  width="30" height="30"> -->
-                    <use class="icon-light" href="./image/icon/icons.svg#icon-light"></use>
+                    <use class="icon-light" href="/src/image/icon/icons.svg#icon-light"></use>
                 </svg>
             </button>
             <!-- <svg class="icon-night" width="30" height="30" hide>
